KB-11711: resolved SonarQube code bugs warnings commiting for 2nd slot  (#131)
* KB-11711: Added unit test cases to improve code coverage and resolved SonarQube code blocker warnings.

* Update CassandraConnectionMngrFactory.java

* KB-11711: Added unit test cases to improve code coverage and resolved SonarQube code blocker warnings.

* KB-11711: Added unit test cases to improve code coverage and resolved SonarQube code blocker warnings.

* KB-11711: Added unit test cases to improve code coverage and resolved SonarQube code blocker warnings.

* KB-11711: resolved SonarQube code blocker warnings.

* KB-11711: resolved SonarQube code blocker warnings.

* KB-11711: resolved SonarQube code bug warnings.

* KB-11711: resolved SonarQube code bug warnings(review comment resolved).

* KB-11711: resolved SonarQube code bug warnings(review comment resolved).

* KB-11711: resolved SonarQube code bug warnings(review comment resolved).

---------

Co-authored-by: pathiknandi <pathik.nandi@tarento.com>